"slider bar , combo boxes & menu bars"